compiler/e2e/test/snapshot/term/implements_qualified_identifier/trait_implements_member/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: trait member not implemented
  ╭─ compiler/e2e/test/snapshot/term/implements_qualified_identifier/trait_implements_member/main.pnx:6:12
  │
2 │     public function first()
  │                     ----- `trait function main::Fizz::first` declared here
  ·
6 │ implements Fizz[int32]:
  │            ^^^^^^^^^^^ missing implementation for trait function: `main::Fizz::first`

error: trait member kind mismatch
  ╭─ compiler/e2e/test/snapshot/term/implements_qualified_identifier/trait_implements_member/main.pnx:7:14
  │
3 │     public type Second
  │                 ------ `trait type main::Fizz::Second` declared here
  ·
7 │     function Second():
  │              ^^^^^^ expected trait type, found implementation function

error: extraneous implementation member
   ╭─ compiler/e2e/test/snapshot/term/implements_qualified_identifier/trait_implements_member/main.pnx:10:10
   │
10 │     type Test = int32
   │          ^^^^ implementation type `main::Fizz[int32]::Test` is not a member of the trait
   │
   = remove this member or add it to the trait definition

error: trait member not implemented
   ╭─ compiler/e2e/test/snapshot/term/implements_qualified_identifier/trait_implements_member/main.pnx:13:12
   │
 3 │     public type Second
   │                 ------ `trait type main::Fizz::Second` declared here
   ·
13 │ implements Fizz[float32]:
   │            ^^^^^^^^^^^^^ missing implementation for trait type: `main::Fizz::Second`

error: symbol `first` is already defined in the scope `main::Fizz[float32]`
   ╭─ compiler/e2e/test/snapshot/term/implements_qualified_identifier/trait_implements_member/main.pnx:17:14
   │
14 │     function first():
   │              ----- symbol `first` is already defined here
   ·
17 │     function first():
   │              ^^^^^ redefinition here

error: extraneous implementation member
   ╭─ compiler/e2e/test/snapshot/term/implements_qualified_identifier/trait_implements_member/main.pnx:20:10
   │
20 │     type What = float32
   │          ^^^^ implementation type `main::Fizz[float32]::What` is not a member of the trait
   │
   = remove this member or add it to the trait definition

error: Compilation aborted due to 6 error(s)



stdout:
